k8s/sonarr/resources/sonarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
        - name: ripping-storage
          persistentVolumeClaim:
            claimName: truenas-ripping-storage
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr:4.0.13@sha256:b2217e5c81155ba002e0497932c2de197b8f5c1ac9c9fff7210e9a6381caab41
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              memory: 3G
            limits:
              memory: 4G
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config-volume
              mountPath: /config
            - name: truenas-media
              mountPath: /media
            - name: ripping-storage
              mountPath: /output
          ports:
            - name: web
              containerPort: 8989

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
