k8s/sonarr/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://sonarr.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: sonarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sonarr
    gethomepage.dev/name: Sonarr
    gethomepage.dev/weight: '20'
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
